Reduce trace, fix filename typo and add missing jar

--- a/dev/com.ibm.ws.security.mp.jwt.1.2_fat/publish/servers/com.ibm.ws.security.mp.jwt.1.2.fat.jvmOptions/bootstrap.properties
+++ b/dev/com.ibm.ws.security.mp.jwt.1.2_fat/publish/servers/com.ibm.ws.security.mp.jwt.1.2.fat.jvmOptions/bootstrap.properties
@@ -11,7 +11,11 @@
 bootstrap.include=../testports.properties
 
 com.ibm.ws.logging.trace.specification=*=info=enabled:\
-com.ibm.ws.security.*=all=enabled:\
-com.ibm.ws.webcontainer.security.*=all=enabled:\
-org.jose4j.jwt.consumer.*=all=enabled:\
-io.openliberty.security.*=all=enabled
+com.ibm.ws.security.authentication*=all:\
+com.ibm.ws.webcontainer.security=all:\
+com.ibm.ws.webcontainer.security.internal*=all:\
+io.openliberty.security.*=all:\
+com.ibm.ws.security.common*=all:\
+com.ibm.ws.security.jwt*=all:\
+com.ibm.ws.security.mp.jwt*=all:\
+com.ibm.ws.security.jwtsso*all
