--- a/dev/com.ibm.ws.security.mp.jwt.1.1_fat/publish/servers/com.ibm.ws.security.mp.jwt.1.1.fat.builder/bootstrap.properties
+++ b/dev/com.ibm.ws.security.mp.jwt.1.1_fat/publish/servers/com.ibm.ws.security.mp.jwt.1.1.fat.builder/bootstrap.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2018 IBM Corporation and others.
+# Copyright (c) 2018, 2020 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -11,6 +11,11 @@
 bootstrap.include=../testports.properties
 
 com.ibm.ws.logging.trace.specification=*=info=enabled:\
-com.ibm.ws.security.*=all=enabled:\
-com.ibm.ws.webcontainer.security.*=all=enabled:\
-io.openliberty.security.*=all=enabled
+com.ibm.ws.security.authentication*=all:\
+com.ibm.ws.webcontainer.security=all:\
+com.ibm.ws.webcontainer.security.internal*=all:\
+io.openliberty.security.*=all:\
+com.ibm.ws.security.common*=all:\
+com.ibm.ws.security.jwt*=all:\
+com.ibm.ws.security.mp.jwt*=all:\
+com.ibm.ws.security.jwtsso*all
