--- a/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
+++ b/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
@@ -13,6 +13,7 @@ apply from: '../wlp-gradle/subprojects/fat.gradle'
 dependencies {
   requiredLibs project(':com.ibm.ws.security.fat.common.jwt'),
   		project(':com.ibm.ws.security.mp.jwt.1.1_fat'),
+		project(':com.ibm.ws.org.jose4j'),
       'commons-logging:commons-logging:1.1.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
       'net.sourceforge.htmlunit:htmlunit:2.44.0',
@@ -33,7 +34,8 @@ dependencies {
       'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
       'commons-codec:commons-codec:1.6',
       'xml-apis:xml-apis:1.4.01',
-      'xerces:xercesImpl:2.11.0'
+      'xerces:xercesImpl:2.11.0',
+      'org.slf4j:slf4j-api:1.7.7'
 }
 
 /* for debugging
