Fix up eclipse settings to get things working again
- Fix up directory to match the package name for jms context fat class
- Fix duplicate entry in .classpath and put in the missing one.
- Add missing test directory for new components
- Update fat/src source directory to include all classes and not just
the FATSuite class so that things compile in eclipse
- Add bnd nature to .project file for new jms delivery delay fat.

--- a/dev/com.ibm.ws.transaction.core_fat.startMultiEJB/.classpath
+++ b/dev/com.ibm.ws.transaction.core_fat.startMultiEJB/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="com/ibm/ws/transaction/test/FATSuite.java" kind="src" path="fat/src"/>
+	<classpathentry kind="src" path="fat/src"/>
 	<classpathentry kind="src" path="test-applications/newEJBTx1/src"/>
 	<classpathentry kind="src" path="test-applications/newEJBTx2/src"/>
 	<classpathentry kind="src" path="test-applications/newEJBTx3/src"/>
