Revert "remove jca-1.7 tests back to CL"
updating to debug tck error

remove reliance on ims ra

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -73,6 +73,9 @@ javax.faces.validator.beanValidator.ValidatorFactory=jakarta.faces.validator.bea
 /javax/servlet/resources/j2ee_web_services_client_1_1.xsd=/jakarta/servlet/resources/j2ee_web_services_client_1_1.xsd
 /javax/servlet/resources/xml.xsd=/jakarta/servlet/resources/xml.xsd
 
+#Jakarta ConnectionFactoryDefinitions interfaceName attribute
+javax.resource.cci.ConnectionFactory=jakarta.resource.cci.ConnectionFactory
+
 # Batch 
 # CDI types
 javax.batch.api.BatchProperty=jakarta.batch.api.BatchProperty
