Gradle test apps into jbatch_fat and provide shrinkwrap support

--- a/dev/com.ibm.ws.jbatch_fat/build.gradle
+++ b/dev/com.ibm.ws.jbatch_fat/build.gradle
@@ -19,3 +19,23 @@ dependencies {
   requiredLibs project(":com.ibm.ws.jbatch.test.dbservlet"),
 	'commons-io:commons-io:2.6'
 }
+
+task copyTestApps {
+  dependsOn ':com.ibm.ws.jbatch.test.dbservlet:autoFVT'
+  doLast {
+    copy {
+      from project(':com.ibm.ws.jbatch.test.dbservlet').file('test-applications')
+      into new File('test-applications')
+    }
+    copy {
+      from project(':com.ibm.ws.jbatch.test.dbservlet').file('src/batch/fat/common/util')
+      into new File('test-applications/src/batch/fat/common/util')
+    }
+  }
+}
+
+jar {
+	dependsOn copyTestApps
+}
+
+autoFVT.dependsOn copyTestApps
