--- a/dev/com.ibm.ws.microprofile.config.1.1_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.config.1.1_fat/build.gradle
@@ -11,6 +11,6 @@
 
 
 dependencies {
-  requiredLibs 'commons-logging:commons-logging:1.1.3', project(':com.ibm.ws.microprofile.config_repeat_tests')
+  requiredLibs 'commons-logging:commons-logging:1.1.3'
   requiredLibs project(path: ':com.ibm.websphere.org.eclipse.microprofile', configuration: 'config11')
 }
