--- a/dev/com.ibm.ws.microprofile.config.1.3_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.config.1.3_fat/build.gradle
@@ -10,6 +10,6 @@
  *******************************************************************************/
 
 dependencies {
-  requiredLibs 'commons-logging:commons-logging:1.1.3', project(':com.ibm.ws.microprofile.config_repeat_tests')
+  requiredLibs 'commons-logging:commons-logging:1.1.3'
   requiredLibs project(path: ':com.ibm.websphere.org.eclipse.microprofile', configuration: 'config13')
 }
