--- a/dev/com.ibm.ws.couchdb_fat/build.gradle
+++ b/dev/com.ibm.ws.couchdb_fat/build.gradle
@@ -14,13 +14,6 @@ configurations {
 }
 
 dependencies {
-  requiredLibs 'org.testcontainers:testcontainers:1.15.0',
-               'org.apache.commons:commons-compress:1.18',
-               'org.rnorth.duct-tape:duct-tape:1.0.7',
-               'org.rnorth.visible-assertions:visible-assertions:2.1.2',
-               'net.java.dev.jna:jna:5.2.0',
-               'org.slf4j:slf4j-api:1.7.7',
-               'org.slf4j:slf4j-jdk14:1.7.7'
   couchdb 'com.fasterxml.jackson.core:jackson-annotations:2.2.3',
           'com.fasterxml.jackson.core:jackson-core:2.2.3',
           'com.fasterxml.jackson.core:jackson-databind:2.2.3',
@@ -41,3 +34,4 @@ task copyCouchDB(type: Copy) {
 }
 
  addRequiredLibraries.dependsOn copyCouchDB
+ addRequiredLibraries.dependsOn addTestcontainers
