--- a/dev/com.ibm.ws.logstash.collector_fat/build.gradle
+++ b/dev/com.ibm.ws.logstash.collector_fat/build.gradle
@@ -8,14 +8,8 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+addRequiredLibraries.dependsOn addTestcontainers
+
 dependencies {
-  requiredLibs 'org.testcontainers:testcontainers:1.15.0',
-               'org.apache.commons:commons-compress:1.19',
-               'org.rnorth.duct-tape:duct-tape:1.0.7',
-               'org.rnorth.visible-assertions:visible-assertions:2.1.2',
-               'org.rnorth:tcp-unix-socket-proxy:1.0.2',
-               'net.java.dev.jna:jna:5.2.0',
-               'org.slf4j:slf4j-api:1.7.7',
-               'org.slf4j:slf4j-jdk14:1.7.7',
-               'org.json:json:20080701'
-}
+  requiredLibs 'org.json:json:20080701' 
+} 
