--- a/dev/com.ibm.ws.springboot.support.version23.test.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.support.version23.test.app/build.gradle
@@ -9,20 +9,7 @@ group = 'com.ibm.ws.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
-repositories.clear()
-repositories {
-  if (isUsingArtifactory) {
-    maven {
-      credentials {
-        username userProps.getProperty("artifactory.download.user")
-        password userProps.getProperty("artifactory.download.token")
-      }
-      url ("https://" + gradle.userProps.getProperty("artifactory.download.server") + "/artifactory/wasliberty-maven-remote")
-    }
-  } else {
-    mavenCentral()
-  }
-}
+apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
