--- a/dev/com.ibm.ws.transaction.db_fat/build.gradle
+++ b/dev/com.ibm.ws.transaction.db_fat/build.gradle
@@ -8,23 +8,16 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
 
 configurations {
     postgres
 }
 
 dependencies {
-  requiredLibs 'org.testcontainers:testcontainers:1.15.0',
-               'org.testcontainers:database-commons:1.15.0',
-               'org.testcontainers:jdbc:1.15.0',
-               'org.testcontainers:postgresql:1.15.0',
-               'org.apache.commons:commons-compress:1.19',
-               'org.rnorth.duct-tape:duct-tape:1.0.7',
-               'org.rnorth.visible-assertions:visible-assertions:2.1.2',
-               'org.rnorth:tcp-unix-socket-proxy:1.0.2',
-               'net.java.dev.jna:jna:5.2.0',
-               'org.slf4j:slf4j-api:1.7.7',
-               'org.slf4j:slf4j-jdk14:1.7.7'
+  requiredLibs "org.testcontainers:database-commons:${testcontainersVersion}",
+               "org.testcontainers:jdbc:${testcontainersVersion}",
+               "org.testcontainers:postgresql:${testcontainersVersion}"
   postgres 'org.postgresql:postgresql:42.2.5'
 }
 
@@ -45,3 +38,4 @@ task copyAnonymousPostgres(type: Copy) {
 addRequiredLibraries.dependsOn copySharedPostgres
 addRequiredLibraries.dependsOn copyAnonymousPostgres
 addRequiredLibraries.dependsOn copyFattestDatabases
+addRequiredLibraries.dependsOn addTestcontainers
