--- a/dev/io.openliberty.microprofile.metrics.internal.3.0_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.metrics.internal.3.0_fat_tck/publish/tckRunner/tck/pom.xml
@@ -12,8 +12,16 @@
 
     <groupId>io.openliberty.microprofile.metrics</groupId>
     <artifactId>tck.runner.tck</artifactId>
-    <version>3.0-RC3</version>
+    <version>3.0</version>
     <name>MicroProfile Metrics TCK Runner 3.0 TCK Module</name>
+
+	<repositories>
+		<repository>
+			<id>ossrepo</id>
+			<url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1382/</url>
+		</repository>
+	</repositories>
+
 
     <properties>
         <microprofile.metrics.version>3.0-RC3</microprofile.metrics.version>
