--- a/dev/io.openliberty.microprofile.metrics.internal.3.0_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.metrics.internal.3.0_fat_tck/publish/tckRunner/tck/pom.xml
@@ -24,7 +24,7 @@
 
 
     <properties>
-        <microprofile.metrics.version>3.0-RC3</microprofile.metrics.version>
+        <microprofile.metrics.version>3.0</microprofile.metrics.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
