--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
@@ -107,3 +107,5 @@ addRequiredLibraries {
   dependsOn addJersey
   dependsOn addMockserver
 }
+
+addRequiredLibraries.dependsOn addJakartaTransformer
