--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/publish/servers/jaxrs21.client.JAXRS21ProxyAuthTest/bootstrap.properties
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/publish/servers/jaxrs21.client.JAXRS21ProxyAuthTest/bootstrap.properties
@@ -1,1 +1,5 @@
 bootstrap.include=../testports.properties
+
+com.ibm.ws.logging.trace.specification=*=info:\
+RESTfulWS=all:\
+org.jboss.resteasy.*=all
