--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/publish/servers/jaxrs21.client.JAXRS21TimeoutClientTest/bootstrap.properties
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/publish/servers/jaxrs21.client.JAXRS21TimeoutClientTest/bootstrap.properties
@@ -4,5 +4,7 @@ com.ibm.ws.logging.trace.specification=*=info:\
 com.ibm.ws.jaxrs*=all:\
 com.ibm.websphere.jaxrs*=all:\
 org.apache.cxf.*=all:\
-ClassLoadingService=all
+ClassLoadingService=all:\
+RESTfulWS=all:\
+org.jboss.resteasy.*=all
 com.ibm.ws.logging.max.file.size=0
