--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/test-applications/jaxrs21bookstore/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/test-applications/jaxrs21bookstore/resources/WEB-INF/web.xml
@@ -16,6 +16,7 @@
   		<param-name>javax.ws.rs.Application</param-name>
   		<param-value>com.ibm.ws.jaxrs21.fat.JAXRS21bookstore.JAXRS21BookApplication</param-value>
   	</init-param>
+  	<async-supported>true</async-supported>
   </servlet>
 
   <!-- SERVLET MAPPINGS -->        
