--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/test-applications/jaxrs21clientcallback/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/test-applications/jaxrs21clientcallback/resources/WEB-INF/web.xml
@@ -7,6 +7,7 @@
     <display-name>JaxRS2.1 Client FAT</display-name>
     <servlet>
     	<servlet-name>com.ibm.ws.jaxrs21.client.callback.server.JAXRS21MyApplication</servlet-name>
+    	<async-supported>true</async-supported>
     </servlet>
     <servlet-mapping>
     	<servlet-name>com.ibm.ws.jaxrs21.client.callback.server.JAXRS21MyApplication</servlet-name>
