--- a/dev/io.openliberty.wsoc.internal_fat/build.gradle
+++ b/dev/io.openliberty.wsoc.internal_fat/build.gradle
@@ -11,6 +11,8 @@
 
 dependencies {
   requiredLibs 'net.sf.jtidy:jtidy:9.3.8',
+    'org.apache.httpcomponents.client5:httpclient5:5.0',
+    'org.apache.httpcomponents.core5:httpcore5:5.0',
     'org.eclipse.jetty.websocket:websocket-client:9.2.2.v20140723',
     'org.eclipse.jetty.websocket:websocket-api:9.2.2.v20140723',
     'org.eclipse.jetty.websocket:websocket-common:9.2.2.v20140723',
