--- a/dev/wlp-gradle/subprojects/tasks.gradle
+++ b/dev/wlp-gradle/subprojects/tasks.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019 IBM Corporation and others.
+ * Copyright (c) 2019, 2020 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -155,8 +155,8 @@ dependencies {
                           'commons-cli:commons-cli:1.4',
                           'org.slf4j:slf4j-simple:1.7.30',
                           'org.slf4j:slf4j-api:1.7.26',
-                          'org.eclipse.transformer:org.eclipse.transformer:0.2.0-SNAPSHOT',
-                          'org.eclipse.transformer:org.eclipse.transformer.cli:0.2.0-SNAPSHOT'
+                          'org.eclipse.transformer:org.eclipse.transformer:0.2.0',
+                          'org.eclipse.transformer:org.eclipse.transformer.cli:0.2.0'
 }
 
 task jakartaeeTransform {
