More progress(ish) on Oracle with SSL

--- a/dev/com.ibm.ws.jdbc_fat_oracle/publish/files/oracle-ssl/Dockerfile
+++ b/dev/com.ibm.ws.jdbc_fat_oracle/publish/files/oracle-ssl/Dockerfile
@@ -1,5 +1,8 @@
 FROM kyleaure/oracle-18.4.0-xe-prebuilt
 
+RUN yum update -y
+RUN yum -y install vim
+
 COPY setup/ /opt/oracle/scripts/setup/
 
 ENV ORACLE_PWD=password
