Batch 2.0, batchManagement 2.0, and related features

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -72,3 +72,15 @@ javax.faces.validator.beanValidator.ValidatorFactory=jakarta.faces.validator.bea
 /javax/servlet/resources/j2ee_1_4.xsd=/jakarta/servlet/resources/j2ee_1_4.xsd
 /javax/servlet/resources/j2ee_web_services_client_1_1.xsd=/jakarta/servlet/resources/j2ee_web_services_client_1_1.xsd
 /javax/servlet/resources/xml.xsd=/jakarta/servlet/resources/xml.xsd
+
+# Batch 
+# CDI types
+javax.batch.api.BatchProperty=jakarta.batch.api.BatchProperty
+javax.batch.runtime.context.JobContext=jakarta.batch.runtime.context.JobContext
+javax.batch.runtime.context.StepContext=javax.batch.runtime.context.StepContext
+# TopLevelStepInstanceEntity @NamedQuery
+SELECT\ s.partitionNumber\ FROM\ StepThreadInstanceEntity\ s\ WHERE\ s.jobInstance.instanceId\ \=\ \:instanceId\ AND\ s.stepName\ \=\ \:stepName\ AND\ TYPE(s)\ <>\ TopLevelStepInstanceEntity\ AND\ s.latestStepThreadExecution.batchStatus\ \=\ javax.batch.runtime.BatchStatus.COMPLETED\ ORDER\ BY\ s.partitionNumber\ ASC=SELECT\ s.partitionNumber\ FROM\ StepThreadInstanceEntity\ s\ WHERE\ s.jobInstance.instanceId\ \=\ \:instanceId\ AND\ s.stepName\ \=\ \:stepName\ AND\ TYPE(s)\ <>\ TopLevelStepInstanceEntity\ AND\ s.latestStepThreadExecution.batchStatus\ \=\ jakarta.batch.runtime.BatchStatus.COMPLETED\ ORDER\ BY\ s.partitionNumber\ ASC
+# JobExecutionEntity @NamedQuery
+UPDATE\ JobExecutionEntity\ x\ SET\ x.serverId\ \=\ \:serverId,\ x.restUrl\ \=\ \:restUrl\ WHERE\ x.jobExecId\ \=\ \:jobExecId\ AND\ x.batchStatus\ \=\ javax.batch.runtime.BatchStatus.STARTING=UPDATE\ JobExecutionEntity\ x\ SET\ x.serverId\ \=\ \:serverId,\ x.restUrl\ \=\ \:restUrl\ WHERE\ x.jobExecId\ \=\ \:jobExecId\ AND\ x.batchStatus\ \=\ jakarta.batch.runtime.BatchStatus.STARTING
+
+javax.jms.Queue=jakarta.jms.Queue
