--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -2,6 +2,14 @@ javax.activation=jakarta.activation
 javax.annotation.security=jakarta.annotation.security
 javax.annotation.sql=jakarta.annotation.sql
 javax.annotation=jakarta.annotation
+javax.batch.api=jakarta.batch.api
+javax.batch.api.chunk=jakarta.batch.api.chunk
+javax.batch.api.chunk.listener=jakarta.batch.api.chunk.listener
+javax.batch.api.listener=jakarta.batch.api.listener
+javax.batch.api.partition=jakarta.batch.api.partition
+javax.batch.operations=jakarta.batch.operations
+javax.batch.runtime=jakarta.batch.runtime
+javax.batch.runtime.context=jakarta.batch.runtime.context
 javax.decorator=jakarta.decorator
 javax.ejb=jakarta.ejb
 javax.ejb.embeddable=jakarta.ejb.embeddable
@@ -198,6 +206,8 @@ org.eclipse.persistence.internal.helper=org.eclipse.persistence.internal.helper
 org.eclipse.persistence.internal.security=org.eclipse.persistence.internal.security
 org.eclipse.persistence.internal.sessions=org.eclipse.persistence.internal.sessions
 
+org.eclipse.persistence.annotations=org.eclipse.persistence.annotations
+org.eclipse.persistence.descriptors=org.eclipse.persistence.descriptors
 org.eclipse.persistence.descriptors.changetracking=org.eclipse.persistence.descriptors.changetracking
 org.eclipse.persistence.queries=org.eclipse.persistence.queries
 org.eclipse.persistence.indirection=org.eclipse.persistence.indirection
