--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -79,3 +79,8 @@ test.jsonb.bundle.ServiceThatRequiresJsonb.xml=jakarta-jsonProvider.properties
 test.jsonp.bundle.ServiceThatRequiresJsonp.xml=jakarta-jsonProvider.properties
 # xml ws
 com.ibm.ws.org.apache.cxf.cxf.rt.frontend.jaxws_3_2.ResourceProvider.xml=jakarta-xml-ws-provider.properties
+# Batch
+com.ibm.jbatch.container.impl.BatchKernelImpl.xml=jakarta-transactionManager.properties
+com.ibm.jbatch.container.api.impl.JobOperatorImpl.xml=jakarta-batch.properties
+com.ibm.jbatch.container.api.impl.JobOperatorImplSuspendTran.xml=jakarta-batch.properties
+com.ibm.ws.jbatch.cdi.BatchCDIInjectionExtension.xml=jakarta-batch.properties
