Transform cxf bundles to jakartaee

--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -53,6 +53,8 @@ javax.json.bind=jakarta.json.bind
 javax.json.spi=jakarta.json.spi
 javax.json.stream=jakarta.json.stream
 javax.json=jakarta.json
+javax.jws=jakarta.jws
+javax.jws.soap=jakarta.jws.soap
 javax.mail=jakarta.mail
 javax.persistence.criteria=jakarta.persistence.criteria
 javax.persistence.metamodel=jakarta.persistence.metamodel
@@ -115,7 +117,9 @@ javax.xml.bind.attachment=jakarta.xml.bind.attachment
 javax.xml.bind.helpers=jakarta.xml.bind.helpers
 javax.xml.bind.util=jakarta.xml.bind.util
 javax.xml.bind=jakarta.xml.bind
+javax.xml.soap=jakarta.xml.soap
 javax.xml.ws=jakarta.xml.ws
+javax.xml.ws.spi=jakarta.xml.ws.spi
 
 #Required for common enterprise beans test tools
 com.ibm.websphere.ejbcontainer.test.mdb=io.openliberty.ejbcontainer.jakarta.test.mdb
