--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -77,3 +77,5 @@ com.ibm.ws.security.javaeesec.cdi.extensions.JavaEESecCDIExtension.xml=jakarta-x
 # jsonb FAT
 test.jsonb.bundle.ServiceThatRequiresJsonb.xml=jakarta-jsonProvider.properties
 test.jsonp.bundle.ServiceThatRequiresJsonp.xml=jakarta-jsonProvider.properties
+# xml ws
+com.ibm.ws.org.apache.cxf.cxf.rt.frontend.jaxws_3_2.ResourceProvider.xml=jakarta-xml-ws-provider.properties
