--- a/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
@@ -43,6 +43,8 @@ jakarta.json.spi=[2.0,3.0)
 jakarta.json.stream=[2.0,3.0)
 jakarta.json=[2.0,3.0)
 jakarta.jms=[3.0,4)
+jakarta.jws=[3.0,4)
+jakarta.jws.soap=[3.0,4)
 jakarta.persistence.criteria=[3.0,4)
 jakarta.persistence.metamodel=[3.0,4)
 jakarta.persistence.spi=[3.0,4)
@@ -98,7 +100,9 @@ jakarta.xml.bind.attachment=[3.0,4)
 jakarta.xml.bind.helpers=[3.0,4)
 jakarta.xml.bind.util=[3.0,4)
 jakarta.xml.bind=[3.0,4)
+jakarta.xml.soap=[3.0,4)
 jakarta.xml.ws=[3.0,4)
+jakarta.xml.ws.spi=[3.0,4)
 jakarta.websocket=[2.0,3)
 jakarta.websocket.server=[2.0,3)
 org.apache.myfaces.cdi.util=[3.0,4)
