Transform webservices bundles to jakartaee

--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -119,6 +119,7 @@ javax.xml.bind.util=jakarta.xml.bind.util
 javax.xml.bind=jakarta.xml.bind
 javax.xml.soap=jakarta.xml.soap
 javax.xml.ws=jakarta.xml.ws
+javax.xml.ws.soap=jakarta.xml.ws.soap
 javax.xml.ws.spi=jakarta.xml.ws.spi
 
 #Required for common enterprise beans test tools
