--- a/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
@@ -102,6 +102,7 @@ jakarta.xml.bind.util=[3.0,4)
 jakarta.xml.bind=[3.0,4)
 jakarta.xml.soap=[3.0,4)
 jakarta.xml.ws=[3.0,4)
+jakarta.xml.ws.soap=[3.0,4)
 jakarta.xml.ws.spi=[3.0,4)
 jakarta.websocket=[2.0,3)
 jakarta.websocket.server=[2.0,3)
