Add Multidatabase Support to JPA FAT
Signed-off-by: Will Dazey <dazeydev.3@gmail.com>

--- a/dev/com.ibm.ws.jpa_spec10_injection_fat/build.gradle
+++ b/dev/com.ibm.ws.jpa_spec10_injection_fat/build.gradle
@@ -53,7 +53,9 @@ task addJPAFATTools (type: Copy) {
 }
 
 addRequiredLibraries {
-  dependsOn addDerby
+  dependsOn copyJdbcDrivers
+  dependsOn copyDatabaseRotationDrivers
+  dependsOn copyFattestDatabases
   dependsOn addhibernateJPA22
   dependsOn addJakartaTransformer
   dependsOn addJPAFATTools
