--- a/dev/settings.gradle
+++ b/dev/settings.gradle
@@ -58,11 +58,11 @@ pluginManagement {
   props.setProperty('fetch.oss.source.repository', fetchRepoSource)
 
   // Bnd configuration for where to download open source software binaries from.
+  // Note: no non-artifactory snapshotUrl because we must not rely on public snapshots
   String fetchRepoPublic = !isUsingArtifactory ?
           ('aQute.bnd.repository.maven.provider.MavenBndRepository;'
                   +'name = RemotePublic;'
                   +'releaseUrl=https://repo.maven.apache.org/maven2/'
-                  +';snapshotUrl=https://oss.sonatype.org/content/repositories/snapshots/'
                   +';index=${build}/oss_dependencies.maven') :
 
           ('aQute.bnd.repository.maven.provider.MavenBndRepository'
