Code review changes from Jared

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -77,7 +77,7 @@ javax.faces.validator.beanValidator.ValidatorFactory=jakarta.faces.validator.bea
 # CDI types
 javax.batch.api.BatchProperty=jakarta.batch.api.BatchProperty
 javax.batch.runtime.context.JobContext=jakarta.batch.runtime.context.JobContext
-javax.batch.runtime.context.StepContext=javax.batch.runtime.context.StepContext
+javax.batch.runtime.context.StepContext=jakarta.batch.runtime.context.StepContext
 # TopLevelStepInstanceEntity @NamedQuery
 SELECT\ s.partitionNumber\ FROM\ StepThreadInstanceEntity\ s\ WHERE\ s.jobInstance.instanceId\ \=\ \:instanceId\ AND\ s.stepName\ \=\ \:stepName\ AND\ TYPE(s)\ <>\ TopLevelStepInstanceEntity\ AND\ s.latestStepThreadExecution.batchStatus\ \=\ javax.batch.runtime.BatchStatus.COMPLETED\ ORDER\ BY\ s.partitionNumber\ ASC=SELECT\ s.partitionNumber\ FROM\ StepThreadInstanceEntity\ s\ WHERE\ s.jobInstance.instanceId\ \=\ \:instanceId\ AND\ s.stepName\ \=\ \:stepName\ AND\ TYPE(s)\ <>\ TopLevelStepInstanceEntity\ AND\ s.latestStepThreadExecution.batchStatus\ \=\ jakarta.batch.runtime.BatchStatus.COMPLETED\ ORDER\ BY\ s.partitionNumber\ ASC
 # JobExecutionEntity @NamedQuery
