Issue #13664: Final Jakarta EJB API Update to final approved version of EJB 4.0 API

--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -724,7 +724,7 @@
     <dependency>
       <groupId>jakarta.ejb</groupId>
       <artifactId>jakarta.ejb-api</artifactId>
-      <version>4.0.0-RC2</version>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.enterprise.concurrent</groupId>
