--- a/dev/wlp-gradle/subprojects/tasks.gradle
+++ b/dev/wlp-gradle/subprojects/tasks.gradle
@@ -360,7 +360,8 @@ test {
   }
 
   timeout = Duration.ofMinutes(15)
-  ignoreFailures = Boolean.valueOf(rootProject.ext.userProps.getProperty("gradle.test.ignoreFailures", "false"))
+  //Set ignore failures using -Dgradle.test.ignoreFailures=true
+  ignoreFailures = Boolean.valueOf(System.getProperty("gradle.test.ignoreFailures", "false"))
   environment("WLP_INSTALL_DIR", buildImage.file('wlp'))
   jvmArgs "-Dtest.buildDir=${buildDir}"
   jvmArgs "-Djava.io.tmpdir=${buildDir}/tmp"
