Issue #15201: Update the Jakarta EE9 API spec to release version.

--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -717,6 +717,11 @@
       <version>2.0.0</version>
     </dependency>
     <dependency>
+      <groupId>jakarta.authentication</groupId>
+      <artifactId>jakarta.authentication-api</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>jakarta.authorization</groupId>
       <artifactId>jakarta.authorization-api</artifactId>
       <version>2.0.0</version>
@@ -787,14 +792,9 @@
       <version>2.0.0</version>
     </dependency>
     <dependency>
-      <groupId>jakarta.security.auth.message</groupId>
-      <artifactId>jakarta.security.auth.message-api</artifactId>
-      <version>2.0.0-RC1</version>
-    </dependency>
-    <dependency>
       <groupId>jakarta.security.enterprise</groupId>
       <artifactId>jakarta.security.enterprise-api</artifactId>
-      <version>2.0.0-RC2</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
