transform more xmlWS-3.0 dependencies and update xmlWs-3.0 feature

--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -127,8 +127,14 @@ javax.xml.bind.util=jakarta.xml.bind.util
 javax.xml.bind=jakarta.xml.bind
 javax.xml.soap=jakarta.xml.soap
 javax.xml.ws=jakarta.xml.ws
+javax.xml.ws.handler=jakarta.xml.ws.handler
+javax.xml.ws.handler.soap=jakarta.xml.ws.handler.soap
+javax.xml.ws.http=jakarta.xml.ws.http
 javax.xml.ws.soap=jakarta.xml.ws.soap
 javax.xml.ws.spi=jakarta.xml.ws.spi
+javax.xml.ws.spi.http=jakarta.xml.ws.spi.http
+javax.xml.ws.wsaddressing=jakarta.xml.ws.wsaddressing
+
 
 #Required for common enterprise beans test tools
 com.ibm.websphere.ejbcontainer.test.mdb=io.openliberty.ejbcontainer.jakarta.test.mdb
@@ -223,3 +229,5 @@ org.eclipse.persistence.platform.database=org.eclipse.persistence.platform.datab
 org.eclipse.persistence.sessions=org.eclipse.persistence.sessions
 org.eclipse.persistence.tools.schemaframework=org.eclipse.persistence.tools.schemaframework
 org.eclipse.persistence.transaction=org.eclipse.persistence.transaction
+
+com.sun.xml.bind=org.glassfish.jaxb
