--- a/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
@@ -110,8 +110,13 @@ jakarta.xml.bind.util=[3.0,4)
 jakarta.xml.bind=[3.0,4)
 jakarta.xml.soap=[3.0,4)
 jakarta.xml.ws=[3.0,4)
+jakarta.xml.ws.handler=[3.0,4)
+jakarta.xml.ws.handler.soap=[3.0,4)
+jakarta.xml.ws.http=[3.0,4)
 jakarta.xml.ws.soap=[3.0,4)
 jakarta.xml.ws.spi=[3.0,4)
+jakarta.xml.ws.spi.http=[3.0,4)
+jakarta.xml.ws.wsaddressing=[3.0,4)
 jakarta.websocket=[2.0,3)
 jakarta.websocket.server=[2.0,3)
 org.apache.myfaces.cdi.util=[3.0,4)
@@ -121,6 +126,7 @@ org.apache.myfaces.shared.util=[3.0,4)
 org.apache.myfaces.spi=[3.0,4)
 org.apache.myfaces.util=[3.0,4)
 org.apache.myfaces.webapp=[3.0,4)
+org.glassfish.jaxb=[3.0,4)
 org.hibernate.validator=[7.0,8)
 org.hibernate.validator.cdi.internal=[7.0,8)
 org.hibernate.validator.cdi=[7.0,8)
