more code review changes
Remove trailing white space

Remove unnecessary transforms

fix property update

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -89,4 +89,4 @@ javax.jms.Queue=jakarta.jms.Queue
 javax.enterprise.context.RequestScoped=jakarta.enterprise.context.RequestScoped
 javax.enterprise.context.ApplicationScoped=jakarta.enterprise.context.ApplicationScoped
 javax.enterprise.context.SessionScoped=jakarta.enterprise.context.SessionScoped
-javax.enterprise.context.Dependent
+javax.enterprise.context.Dependent=jakarta.enterprise.context.Dependent
