use jackson projects in gradle binary deps

--- a/dev/com.ibm.ws.microprofile.openapi_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.openapi_fat/build.gradle
@@ -10,9 +10,5 @@
  *******************************************************************************/
 
 dependencies {
-  requiredLibs 'com.fasterxml.jackson.core:jackson-annotations:2.11.2'
-  requiredLibs 'com.fasterxml.jackson.core:jackson-core:2.11.2'
-  requiredLibs 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
-  requiredLibs 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.2'
-  requiredLibs 'org.yaml:snakeyaml:1.27'
+  requiredLibs project(':io.openliberty.com.fasterxml.jackson')
 }
