--- a/dev/com.ibm.ws.couchdb_fat/build.gradle
+++ b/dev/com.ibm.ws.couchdb_fat/build.gradle
@@ -21,9 +21,7 @@ dependencies {
                'net.java.dev.jna:jna:5.2.0',
                'org.slf4j:slf4j-api:1.7.7',
                'org.slf4j:slf4j-jdk14:1.7.7'
-  couchdb 'com.fasterxml.jackson.core:jackson-annotations:2.11.2',
-          'com.fasterxml.jackson.core:jackson-core:2.11.2',
-          'com.fasterxml.jackson.core:jackson-databind:2.11.2',
+  couchdb project(':io.openliberty.com.fasterxml.jackson'),
           'commons-codec:commons-codec:1.6',
           'commons-io:commons-io:2.6',
           'commons-logging:commons-logging:1.1.1',
