Add xmlBinding fixes to ensure xmlWS-3.0 can start cleanly
Remove trailing whitespace

Initial code review changes

--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -1,3 +1,7 @@
+com.sun.xml.bind.v2=org.glassfish.jaxb.runtime.v2
+com.sun.xml.bind.api=org.glassfish.jaxb.runtime.api
+com.sun.xml.internal.bind=org.glassfish.jaxb
+
 javax.activation=jakarta.activation
 javax.annotation.security=jakarta.annotation.security
 javax.annotation.sql=jakarta.annotation.sql
@@ -229,3 +233,4 @@ org.eclipse.persistence.platform.database=org.eclipse.persistence.platform.datab
 org.eclipse.persistence.sessions=org.eclipse.persistence.sessions
 org.eclipse.persistence.tools.schemaframework=org.eclipse.persistence.tools.schemaframework
 org.eclipse.persistence.transaction=org.eclipse.persistence.transaction
+
