--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -90,3 +90,7 @@ javax.enterprise.context.RequestScoped=jakarta.enterprise.context.RequestScoped
 javax.enterprise.context.ApplicationScoped=jakarta.enterprise.context.ApplicationScoped
 javax.enterprise.context.SessionScoped=jakarta.enterprise.context.SessionScoped
 javax.enterprise.context.Dependent=jakarta.enterprise.context.Dependent
+
+
+com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
+com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
