Fix duplicate property

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -91,6 +91,6 @@ javax.enterprise.context.ApplicationScoped=jakarta.enterprise.context.Applicatio
 javax.enterprise.context.SessionScoped=jakarta.enterprise.context.SessionScoped
 javax.enterprise.context.Dependent=jakarta.enterprise.context.Dependent
 
-
-com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
+# xmlBinding-3.0 Context properties
+com.sun.xml.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
 com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
